--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,18 @@ grid-area: header;
 main{
     grid-area: main;
     background-color: #ffe4e6;
+    display: grid;
+    grid-template-columns: repeat(2,2fr) repeat(1,1.5fr);
+    grid-template-rows: repeat(3,1fr) min-content;
+    grid-template-areas: "div1 div2" 
+                         "div3 div4"
+                         "div5 div6";
+    column-gap:50px;
+    row-gap:20px;
+}
+
+main > .one,.two,.three,.four,.five,.six,.seven,.eight,.nine{
+    border: 2px solid red;
 }
 
 .sidebar
@@ -37,18 +49,19 @@ main{
     display: grid;
     grid-template-rows:  repeat(11, 45px) min-content;
     grid-template-areas: 
-                        "h3"
-                        "p1"
-                         "p2"
-                         "p3"
-                         "p4"
-                         "p5"
-                         "p6"
-                         "p7"
-                         "p8"
-                         "p9"
-                         "p10";
+                        ". h3"
+                        ". p1"
+                         ". p2"
+                         ". p3"
+                         ". p4"
+                         ". p5"
+                         ". p6"
+                         ". p7"
+                         ". p8"
+                         ". p9"
+                         ". p10";
    color: #ffffff; 
+   
 
 }
 
@@ -59,14 +72,19 @@ main{
     margin-top: 2rem;
     grid-area: h3;
     font-size: 1.3rem;
+   
 }
 
 .sidebar p
 {
-    font-size:1.16rem;
+    font-size: 1.16rem;
+   
+
 }
+
 .sidebar > p:first-child
 {
+   border:3px solid green;
 grid-area: p1;
 }
 .sidebar > p:nth-child(2)
@@ -116,5 +134,6 @@ grid-row: 11/12;
 grid-area: p10;
 grid-row: 12/13;
 }
+
 
 
