--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@
 
     display: grid;
     grid-template-columns: repeat(1, 1fr) repeat(1,5fr);
-    grid-template-rows: 1fr 4fr min-content;
+    grid-template-rows: 1fr 5fr min-content;
     grid-template-areas: 
     "sidebar header"
     "sidebar main";
@@ -23,6 +23,22 @@
 header{
 background-color: #ffffff;
 grid-area: header;
+display:grid;
+grid-template-columns: repeat(1, 0.5fr) repeat(3,1fr);
+grid-template-rows: repeat(2,1fr) min-content;
+grid-template-areas: " . search search notifs"
+                     " .  user user buttons";
+}
+
+.search{
+   
+    grid-area: search;
+    background-color: rgb(193, 192, 192);
+    margin-top:1.1rem;
+    border-radius: 1rem;
+    max-width:500px;
+    max-height: 30px;
+
 }
 
 
@@ -44,29 +60,34 @@ main{
 }
 
 .announcements {
+    margin-top:40px;
     grid-area: div11;
     margin-right:50px;
-    border: 2px solid rgb(87, 29, 212);
+    display: flex;
+    flex-direction: column;
+    color:rgb(23, 7, 75);
+    background-color: #f6e6ec;
+    border-radius: 5%;
+    max-height: 230px;
 
 }
 
 .trending
-{   margin-right:50px;
+{  
+    margin-top:30px;
+    margin-right:50px;
     grid-area:div12;
-    border: 2px solid rgb(198, 171, 255);
+    display: flex;
+    flex-direction: column;
+    color:rgb(23, 7, 75);
+    background-color: #f6e6ec;
+    border-radius: 5%;
+    max-height: 230px;
+  
 
 }
 
-.announcements > h4
-{
-    margin-top:1rem;
 
-}
-
-.trending > h4
-{
-    margin-top:1rem;
-}
 
 
 .one
