--- a/styles.css
+++ b/styles.css
@@ -33,12 +33,26 @@ grid-template-areas: " . search search notifs"
 .search{
    
     grid-area: search;
-    background-color: rgb(193, 192, 192);
+    background-color: rgb(220, 218, 218);
     margin-top:1.1rem;
     border-radius: 1rem;
     max-width:500px;
     max-height: 30px;
+ 
 
+}
+
+.search > img{
+border-radius: 30px;
+}
+
+.user
+{   display: flex;   
+     margin-top: 0.7rem;
+    grid-area: user;
+    max-width:500px;
+    max-height: 30px;
+    gap: 15px;
 }
 
 
